# LabPrut

./: .gitignore  AnalysisDis.m  Insights.docx  README.md  RecordingFrames.csv  RecordingFrames.xlsx  analyse.docx  pyproject.toml  requirements.txt  ~$nalyse.docx  ~WRL0716.tmp  מטלה 1 - שאלת מחקר מעיין שני.docx
data/h5/day1/: dataControlDay1Try1.h5  dataControlDay1Try2.h5  dataControlDay1Try3.h5  dataHfsDay1Try1.h5  dataHfsDay1Try2.h5  dataHfsDay1Try3.h5
data/h5/day2section1/: dataControlDay2Try1.h5  dataControlDay2Try2.h5  dataControlDay2Try3.h5  dataControlDay2Try4.h5  dataControlDay2Try5.h5  dataHfsDay2Try1.h5  dataHfsDay2Try2.h5  dataHfsDay2Try3.h5  dataHfsDay2Try4.h5  dataHfsDay2Try5.h5
data/h5/day2section2/: dataControlDay2Try10.h5  dataControlDay2Try6.h5  dataControlDay2Try7.h5  dataControlDay2Try8.h5  dataControlDay2Try9.h5  dataHfsDay2Try10.h5  dataHfsDay2Try6.h5  dataHfsDay2Try7.h5  dataHfsDay2Try8.h5  dataHfsDay2Try9.h5
labProject/: constants.py  createPlots.py  main.py  pca.py  readData.py  readDataOldVer.py  velPca.py
markovProject/: constants.py  createPlots.py  main.py  readData.py  readDataOldVer.py
markovProject/analysisRecordingFrames/: analysisRecordingFrames.py
word/: ~$לה 1 - שאלת מחקר מעיין שני מעודכנת.docx  ~$מטלה 2.docx  ~$מטלה 3.docx  ~$תוח נתונים.docx  מטלה 1 - שאלת מחקר מעיין שני מעודכנת.docx  מטלה 2 מעודכנת.docx  מטלה 2.docx  מטלה 3.docx  ניתוח נתונים.docx
