[tool.poetry]
name = "labprut"
version = "0.1.0"
description = "Analyze data from the research of Yifat Prut and Chen Kremer"
authors = ["Maayan Shani <maayan.shani@mail.huji.ac.il>"]
packages = [
    { include = "markovProject" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"

[tool.poetry.scripts]
analyze-data = "markovProject.analysisRecordingFrames.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
